--- a/index.html
+++ b/index.html
@@ -34,51 +34,56 @@
                 <h1 class="header__main-title">Réservez le menu qui vous convient</h1>
                 <h2 class="header__main-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <a class="button__link" href="#">
-                    <button class="main__button">Explorer nos restaurants</button>
+                    <span class="main__button">Explorer nos restaurants</span>
                 </a>
             </div>
         </header>
 
         <main>
             <div class="step">
-                <h1 class="step__title">Fonctionnement</h1>
+                <h2 class="step__title">Fonctionnement</h2>
                 
-                <a class="step__link" href="#">
-                    <div class="step__choice">
-                        <div class="step__circle">1</div>
-                        <i class="fa-solid fa-mobile-screen-button icon__mobile"></i>
-                        <div class="step__choice-title">
-                            Choisissez un restaurant
+                <div class="step__links">
+                    <a class="step__link" href="#">
+                        <div class="step__choice">
+                            <div class="step__circle">1</div>
+                            <i class="fa-solid fa-mobile-screen-button icon__mobile"></i>
+                            <div class="step__choice-title">
+                                Choisissez un restaurant
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
 
-                <a class="step__link" href="#">
-                    <div class="step__choice">
-                        <div class="step__circle">2</div>
-                        <i class="fa-solid fa-list-ul icon__list icon__menu"></i>
-                        <div class="step__choice-title">
-                            Composez votre menu
+                    <a class="step__link" href="#">
+                        <div class="step__choice">
+                            <div class="step__circle">2</div>
+                            <i class="fa-solid fa-list-ul icon__list icon__menu"></i>
+                            <div class="step__choice-title">
+                                Composez votre menu
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
 
-                <a class="step__link" href="#">
-                    <div class="step__choice">
-                        <div class="step__circle">3</div>
-                        <i class="fa-solid fa-store icon__store icon__store"></i>
-                        <div class="step__choice-title">
-                            Dégustez au restaurant
+                    <div class="step__link">
+                        <div class="step__choice step__choice__purple">
+                            <div class="step__circle">3</div>
+                            <i class="fa-solid fa-store icon__store icon__store"></i>
+                            <div class="step__choice-title">
+                                Dégustez au restaurant
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
 
             
             <div class="restaurants">
-                <h1 class="restaurants__title">Restaurants</h1>
-                    <a class="restaurants__link" href="#">
-                        <div class="restaurants__card">
+                <h2 class="restaurants__title">Restaurants</h2>
+
+                 <div class="restaurants__list">
+
+                    <a class="restaurants__list__item" href="#">
+                        <div class="item__card">
                             <div class="restaurants__card-photo">
                                 <img class="restaurants__photo" src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo La palette du goût">
                                 <div class="restaurants__photo-new">Nouveau</div>
@@ -89,13 +94,16 @@
                                     <span class="restaurants__card-title">La palette du goût</span>
                                     <span class="restaurants__card-description">Ménilmontant</span>
                                 </div>
-                                <div class="restaurants__card-ranking"><i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i><i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i></div>
+                                <div class="restaurants__card-ranking">
+                                    <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
 
-                    <a class="restaurants__link" href="#">
-                        <div class="restaurants__card">
+                    <a class="restaurants__list__item" href="#">
+                        <div class="item__card">
                             <div class="restaurants__card-photo">
                                 <img class="restaurants__photo" src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo La note enchantée">
                                 <div class="restaurants__photo-new">Nouveau</div>
@@ -106,13 +114,16 @@
                                     <span class="restaurants__card-title">La note enchantée</span>
                                     <span class="restaurants__card-description">Charonne</span>
                                 </div>
-                                <div class="restaurants__card-ranking"><i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i><i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i></div>
+                                <div class="restaurants__card-ranking">
+                                    <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
 
-                    <a class="restaurants__link" href="menu-a_la_francaise.html">
-                        <div class="restaurants__card">
+                    <a class="restaurants__list__item" href="menu-a_la_francaise.html">
+                        <div class="item__card">
                             <div class="restaurants__card-photo">
                                 <img class="restaurants__photo" src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo À la française">
                                 <div class="restaurants__photo-new">Nouveau</div>
@@ -123,13 +134,16 @@
                                     <span class="restaurants__card-title">À la française</span>
                                     <span class="restaurants__card-description">Cité Rouge</span>
                                 </div>
-                                <div class="restaurants__card-ranking"><i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i><i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i></div>
+                                <div class="restaurants__card-ranking">
+                                    <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
 
-                    <a class="restaurants__link" href="#">
-                        <div class="restaurants__card">
+                    <a class="restaurants__list__item" href="#">
+                        <div class="item__card">
                             <div class="restaurants__card-photo">
                                 <img class="restaurants__photo" src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo Le délice des sens">
                                 <div class="restaurants__photo-new">Nouveau</div>
@@ -140,10 +154,14 @@
                                     <span class="restaurants__card-title">Le délice des sens</span>
                                     <span class="restaurants__card-description">Folie-Méricourt</span>
                                 </div>
-                                <div class="restaurants__card-ranking"><i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i><i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i></div>
+                                <div class="restaurants__card-ranking">
+                                    <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </div>
                     </a>
+                </div>
             </div>
         </main>
 
@@ -152,10 +170,24 @@
                 ohmyfood
             </div>
             <ul class="footer__list">
-                <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-utensils icon__eat"></i>Proposer un restaurant</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-handshake-angle icon__hand"></i>Devenir partenaire</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="#">Mentions légales</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="mailto:votreadresse@mail.fr">Contact</a></li>
+                <li class="footer__list-line">
+                    <a class="footer__link" href="#">
+                        <i class="fa-solid fa-utensils icon__eat"></i>Proposer un restaurant
+                    </a>
+                </li>
+                <li class="footer__list-line">
+                    <a class="footer__link" href="#">
+                        <i class="fa-solid fa-handshake-angle icon__hand"></i>Devenir partenaire
+                    </a>
+                </li>
+                <li class="footer__list-line">
+                    <a class="footer__link" href="#">Mentions légales
+                    </a>
+                </li>
+                <li class="footer__list-line">
+                    <a class="footer__link" href="mailto:votreadresse@mail.fr">Contact
+                    </a>
+                </li>
             </ul>
         </footer>
     </body>
