--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -38,11 +38,16 @@
 
             <div class="page-title">
                 <h1 class="page-title__name">À la française</h1>
-                <div class="page-title__like"><i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i><i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i></div>    
+                <div class="page-title__like">
+                    <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
+                    <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                </div>    
             </div>
             
             <div class="menu">
                 <h2 class="page__subtitle">ENTRÉES</h2>
+
+                <div class="plate__list">
 
                 <a class="plate__link link" href="#">
                     <div class="page__plate">
