--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/menu.css">
+        <link rel="stylesheet" href="assets/css/footer.css">
     </head>
 
     <body>
