--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -57,59 +57,75 @@
                 <div class="menu__group">
                     <div class="menu__list">
                         <h2 class="page__subtitle">ENTRÉES</h2>
-
-                        <a class="plate__link link" href="#">
-                            <div class="page__plate">
+                        
+                        <div class="page__plate">
+                            <div class="page__plate-card">
                                 <h3 class="page__plate-title">Tartare de poulpe acidulé</h3>
                                 <div class="page__plate-block">
                                     <span class="plate__description">Aux zestes d'orange</span>
                                     <span class="plate__price">25€</span>
                                 </div>
                             </div>
-                        </a>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
+                        </div>
 
-                            <div class="page__plate">
+                        <div class="page__plate">
+                            <div class="page__plate-card">
                                 <h3 class="page__plate-title">Velouté de légumes d'antan</h3>
                                 <div class="page__plate-block">
                                     <span class="plate__description">Carotte, panais, topinambour</span>
                                     <span class="plate__price">35€</span>
                                 </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
+                        </div>
 
-                            <div class="page__plate">
+                        <div class="page__plate">
+                            <div class="page__plate-card">
                                 <h3 class="page__plate-title">Soupe à l'oignon</h3>
                                 <div class="page__plate-block">
                                     <span class="plate__description">Revisitée</span>
                                     <span class="plate__price">20€</span>
                                 </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
+                        </div>
                     </div>
 
                     <div class="menu__list">
                         <h2 class="page__subtitle">PLATS</h2>
 
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Coquilles Saint-Jacques</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Accompagnées d'une purée de panais</span>
-                                <span class="plate__price">40€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Coquilles Saint-Jacques</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Accompagnées d'une purée de panais</span>
+                                    <span class="plate__price">40€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
                         
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Magret de canard</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Et parmentier de pommes de terre</span>
-                                <span class="plate__price">35€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Magret de canard</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Et parmentier de pommes de terre</span>
+                                    <span class="plate__price">35€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
 
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Sur son lit de gnocchis aux légumes</span>
-                                <span class="plate__price">44€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Sur son lit de gnocchis aux légumes</span>
+                                    <span class="plate__price">44€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
                     </div>
 
@@ -117,27 +133,36 @@
                         <h2 class="page__subtitle">DESSERTS</h2>
 
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Pétales de violettes glacés</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Et purée de noisettes</span>
-                                <span class="plate__price">18€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Pétales de violettes glacés</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Et purée de noisettes</span>
+                                    <span class="plate__price">18€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
 
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Fondant au chocolat</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Revisité</span>
-                                <span class="plate__price">22€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Fondant au chocolat</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Revisité</span>
+                                    <span class="plate__price">22€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
 
                         <div class="page__plate">
-                            <h3 class="page__plate-title">Millefeuille croustillant</h3>
-                            <div class="page__plate-block">
-                                <span class="plate__description">Myrtilles et pâte d’amande</span>
-                                <span class="plate__price">23€</span>
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Millefeuille croustillant</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Myrtilles et pâte d’amande</span>
+                                    <span class="plate__price">23€</span>
+                                </div>
                             </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
                         </div>
                     </div>
                 </div>
