--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
 
@@ -27,7 +27,7 @@
         <header class="header">
             <div class="logo">
                 <picture>
-                    <source srcset="assets/img/logo/ohmyfood@2x.svg" type="image/svg" media="min-width:768px">
+                    <source srcset="assets/img/logo/ohmyfood@2x.svg" type="image/svg" media="(min-width:768px)">
                     <img class="logo__image" src="assets/img/logo/ohmyfood.png" alt="Logo Ohmyfood">
                 </picture>
             </div>
