--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="description" content="Ohmyfood est un site de commande en ligne de plat de chef parisien">
@@ -21,7 +21,9 @@
     <body>
         <!-- Loader --> 
         <div class="loader-container">
-            <div class="loader"><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div></div>
+            <div class="loader">
+                <div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div>
+            </div>
         </div>
         <!-- Header with image and logo --> 
         <header class="header">
@@ -169,7 +171,7 @@
 
                 <!-- Button --> 
                 <a class="button__link" href="#">
-                    <button class="main__button">Commander</button>
+                    <span class="main__button">Commander</span>
                 </a>
             </div>
         </main>
