--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -50,8 +50,8 @@
                 <div class="page-title">
                     <h1 class="page-title__name">À la française</h1>
                     <div class="page-title__like">
-                        <i class="fa-regular fa-heart icon__heart-regular" aria-hidden="true"></i>
-                        <i class="fa-solid fa-heart icon__heart-solid" aria-hidden="true"></i>
+                        <i class="far fa-heart icon__heart-regular" aria-hidden="true"></i>
+                        <i class="fas fa-heart icon__heart-solid" aria-hidden="true"></i>
                     </div>    
                 </div>
 
