Clean code review

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="header">
             <div class="logo">
                 <picture>
-                    <source srcset="assets/img/logo/ohmyfood@2x.svg" type="image/svg" media="(min-width:768px)">
+                    <source srcset="assets/img/logo/ohmyfood@2x.svg" type="image/svg+xml" media="(min-width:768px)">
                     <img class="logo__image" src="assets/img/logo/ohmyfood.png" alt="Logo Ohmyfood">
                 </picture>
             </div>
@@ -68,15 +68,14 @@
                             </div>
                         </div>
 
-                        <div class="step__link">
-                            <div class="step__choice step__choice__purple">
-                                <div class="step__circle">3</div>
-                                <i class="fa-solid fa-store icon__store icon__store"></i>
-                                <div class="step__choice-title">
-                                    Dégustez au restaurant
-                                </div>
+                        <div class="step__choice step__choice__purple">
+                            <div class="step__circle">3</div>
+                            <i class="fa-solid fa-store icon__store icon__store"></i>
+                            <div class="step__choice-title">
+                                Dégustez au restaurant
                             </div>
                         </div>
+                    
                     </div>
                 </div>
             </div>
@@ -85,6 +84,7 @@
             <div class="restaurants">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__list">
+
                     <a class="restaurants__list__item" href="#">
                         <div class="item__card">
                             <div class="restaurants__card-photo">
