--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <body>
         <!-- Loader --> 
         <div class="loader-container">
-            <div class="loader"><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div></div>
+            <div class="loader">
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
+            </div>
         </div>
         <!-- Header with logo, input, description and button --> 
         <header class="header">
