--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -22,7 +22,10 @@
         <!-- Loader -->
         <div class="loader-container">
             <div class="loader">
-                <div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div><div class="loader-element"></div>
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
+                <div class="loader-element"></div>
             </div>
         </div>
         <!-- Header with image and logo -->
