Responsive menu, underline footer, image scaled, check fix, title menu animation

--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -181,15 +181,17 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <div class="footer__title">
-                ohmyfood
+            <div class="footer__block">
+                <div class="footer__title">
+                    ohmyfood
+                </div>
+                <ul class="footer__list">
+                    <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-utensils icon__eat"></i>Proposer un restaurant</a></li>
+                    <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-handshake-angle icon__hand"></i>Devenir partenaire</a></li>
+                    <li class="footer__list-line"><a class="footer__link" href="#">Mentions légales</a></li>
+                    <li class="footer__list-line"><a class="footer__link" href="mailto:votreadresse@mail.fr">Contact</a></li>
+                </ul>
             </div>
-            <ul class="footer__list">
-                <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-utensils icon__eat"></i>Proposer un restaurant</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="#"><i class="fa-solid fa-handshake-angle icon__hand"></i>Devenir partenaire</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="#">Mentions légales</a></li>
-                <li class="footer__list-line"><a class="footer__link" href="mailto:votreadresse@mail.fr">Contact</a></li>
-            </ul>
         </footer>
     </body>
 </html>    
