Heart test and 7-1 system

--- a/menu-a_la_francaise.html
+++ b/menu-a_la_francaise.html
@@ -13,9 +13,16 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="assets/css/menu.css">
+        <link rel="stylesheet" href="assets/css/base.css">
+        <link rel="stylesheet" href="assets/css/button.css">
+        <link rel="stylesheet" href="assets/css/heart.css">
+        <link rel="stylesheet" href="assets/css/loader.css">
+        <link rel="stylesheet" href="assets/css/logo.css">
         <link rel="stylesheet" href="assets/css/footer.css">
+        <link rel="stylesheet" href="assets/css/home.css">
+        <link rel="stylesheet" href="assets/css/menu.css">
+        <link rel="stylesheet" href="assets/css/variables.css">
+
     </head>
 
     <body>
@@ -53,8 +60,38 @@
                 <div class="page-title">
                     <h1 class="page-title__name">À la française</h1>
                     <div class="page-title__like">
+
+                    <!-- Heart test
+                    <svg class="heart" height="40" width="40">
+                        <defs>
+                            <clipPath id="svgPath">
+                                <path d="M20,35.09,4.55,19.64a8.5,8.5,0,0,1-.13-12l.13-.13a8.72,8.72,0,0,1,12.14,0L20,10.79l3.3-3.3a8.09,8.09,0,0,1,5.83-2.58,8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.13,12l-.13.13Z"/>
+                            </clipPath>
+                        </defs>
+                    </svg>
+
+                    <div class="heart-container">
+                        <svg width="40" height="40" viewBox="0 0 40 40" class="heart-stroke">
+                            <path d="M20,35.07,4.55,19.62a8.5,8.5,0,0,1-.12-12l.12-.12a8.72,8.72,0,0,1,12.14,0L20,10.77l3.3-3.3A8.09,8.09,0,0,1,29.13,4.9a8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.12,12l-.12.12ZM10.64,7.13A6.44,6.44,0,0,0,6.07,18.19L20,32.06,33.94,18.12A6.44,6.44,0,0,0,34,9l0,0a6.44,6.44,0,0,0-4.77-1.85A6,6,0,0,0,24.83,9L20,13.78,15.21,9A6.44,6.44,0,0,0,10.64,7.13Z"/>
+                        </svg>
+                        
+                        <span class="heart-clip">
+                            <div class="heart-fill"></div>
+                        </span>
+                    </div>
+                -->
+
+
+
+
+
+
+                    <!--Heart -->
+
                         <i class="far fa-heart icon__heart-regular" aria-hidden="true"></i>
                         <i class="fas fa-heart icon__heart-solid" aria-hidden="true"></i>
+            
+
                     </div>    
                 </div>
 
