add others menu's pages

--- a/menu-la_note_enchantée.html
+++ b/menu-la_note_enchantée.html
@@ -51,19 +51,20 @@
         <!-- Menu -->
         <main>
             <picture>
-                <source srcset="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" type="image/png">
-                <img class="restaurant__image" src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image À la française">
+                <source srcset="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" type="image/png">
+                <img class="restaurant__image" src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image La note enchantée">
             </picture>
 
             <div class="menu">
                 <!-- Menu title -->
                 <div class="page-title">
-                    <h1 class="page-title__name">À la française</h1>
+                    <h1 class="page-title__name">La note enchantée</h1>
                     <div class="page-title__like">
 
                     <!--Heart -->
                         <i class="far fa-heart icon__heart-regular" aria-hidden="true"></i>
                         <i class="fas fa-heart icon__heart-solid" aria-hidden="true"></i>
+
                     </div>    
                 </div>
 
@@ -74,9 +75,9 @@
                         
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Tartare de poulpe acidulé</h3>
+                                <h3 class="page__plate-title">Ravioles de foie gras</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Aux zestes d'orange</span>
+                                    <span class="plate__description">Accompagnés de leur crème à la truffe</span>
                                     <span class="plate__price">25€</span>
                                 </div>
                             </div>
@@ -85,9 +86,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Velouté de légumes d'antan</h3>
+                                <h3 class="page__plate-title">Caviar osciètre</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Carotte, panais, topinambour</span>
+                                    <span class="plate__description">Sur blini à la farine de blé noir</span>
                                     <span class="plate__price">35€</span>
                                 </div>
                             </div>
@@ -96,10 +97,21 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Soupe à l'oignon</h3>
+                                <h3 class="page__plate-title">Homard et espuma de potiron</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Revisitée</span>
+                                    <span class="plate__description">Mariné aux zestes d'orange</span>
                                     <span class="plate__price">20€</span>
+                                </div>
+                            </div>
+                            <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
+                        </div>
+
+                        <div class="page__plate">
+                            <div class="page__plate-card">
+                                <h3 class="page__plate-title">Foie gras de canard cuit entier</h3>
+                                <div class="page__plate-block">
+                                    <span class="plate__description">Confiture de figue et pain toasté</span>
+                                    <span class="plate__price">35€</span>
                                 </div>
                             </div>
                             <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
@@ -111,9 +123,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Coquilles Saint-Jacques</h3>
+                                <h3 class="page__plate-title">Noix de coquilles Saint-Jacques</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Accompagnées d'une purée de panais</span>
+                                    <span class="plate__description">Sur lit de purée de céleri-rave</span>
                                     <span class="plate__price">40€</span>
                                 </div>
                             </div>
@@ -122,9 +134,9 @@
                         
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Magret de canard</h3>
+                                <h3 class="page__plate-title">Langoustine poêlée</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Et parmentier de pommes de terre</span>
+                                    <span class="plate__description">Purée de patate douce</span>
                                     <span class="plate__price">35€</span>
                                 </div>
                             </div>
@@ -133,9 +145,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <h3 class="page__plate-title">Mijoté de queue de boeuf</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Sur son lit de gnocchis aux légumes</span>
+                                    <span class="plate__description">Et riz sauvage aux zestes de citron</span>
                                     <span class="plate__price">44€</span>
                                 </div>
                             </div>
@@ -148,9 +160,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Pétales de violettes glacés</h3>
+                                <h3 class="page__plate-title">Macaron noisette et chocolat</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Et purée de noisettes</span>
+                                    <span class="plate__description">Glace au caramel brun et sel de Guérande</span>
                                     <span class="plate__price">18€</span>
                                 </div>
                             </div>
@@ -159,9 +171,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Fondant au chocolat</h3>
+                                <h3 class="page__plate-title">Baba au rhum revisité</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Revisité</span>
+                                    <span class="plate__description">Avec son coulis de citron</span>
                                     <span class="plate__price">22€</span>
                                 </div>
                             </div>
@@ -170,9 +182,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Millefeuille croustillant</h3>
+                                <h3 class="page__plate-title">Tarte au citron meringuée</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Myrtilles et pâte d’amande</span>
+                                    <span class="plate__description">Déstructurée</span>
                                     <span class="plate__price">23€</span>
                                 </div>
                             </div>
