--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/base.css">
-        <link rel="stylesheet" href="assets/css/button.css">
-        <link rel="stylesheet" href="assets/css/heart.css">
-        <link rel="stylesheet" href="assets/css/loader.css">
-        <link rel="stylesheet" href="assets/css/logo.css">
-        <link rel="stylesheet" href="assets/css/footer.css">
         <link rel="stylesheet" href="assets/css/home.css">
-        <link rel="stylesheet" href="assets/css/variables.css">
  
     </head>
 
@@ -82,7 +74,7 @@
 
                             <div class="step__choice step__choice__purple">
                                 <div class="step__circle">3</div>
-                                <i class="fa-solid fa-store icon__store icon__store"></i>
+                                <i class="fa-solid fa-store icon__store icon__purple"></i>
                                 <div class="step__choice-title">
                                     Dégustez au restaurant
                                 </div>
@@ -99,7 +91,7 @@
                     <h2 class="restaurants__title">Restaurants</h2>
                     <div class="restaurants__list">
 
-                        <a class="restaurants__list__item" href="#">
+                        <a class="restaurants__list__item" href="menu-la_palette_du_goût.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo La palette du goût">
@@ -119,7 +111,7 @@
                             </div>
                         </a>
 
-                        <a class="restaurants__list__item" href="#">
+                        <a class="restaurants__list__item" href="menu-la_note_enchantée.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo La note enchantée">
@@ -159,7 +151,7 @@
                             </div>
                         </a>
 
-                        <a class="restaurants__list__item" href="#">
+                        <a class="restaurants__list__item" href="menu-le_délice_des_sens.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo Le délice des sens">
