--- a/menu-la_palette_du_goût.html
+++ b/menu-la_palette_du_goût.html
@@ -51,19 +51,20 @@
         <!-- Menu -->
         <main>
             <picture>
-                <source srcset="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" type="image/png">
-                <img class="restaurant__image" src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image À la française">
+                <source srcset="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" type="image/png">
+                <img class="restaurant__image" src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image La palette du goût">
             </picture>
 
             <div class="menu">
                 <!-- Menu title -->
                 <div class="page-title">
-                    <h1 class="page-title__name">À la française</h1>
+                    <h1 class="page-title__name">La palette du goût</h1>
                     <div class="page-title__like">
 
                     <!--Heart -->
                         <i class="far fa-heart icon__heart-regular" aria-hidden="true"></i>
                         <i class="fas fa-heart icon__heart-solid" aria-hidden="true"></i>
+
                     </div>    
                 </div>
 
@@ -74,9 +75,9 @@
                         
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Tartare de poulpe acidulé</h3>
+                                <h3 class="page__plate-title">Fricassée d'escargot</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Aux zestes d'orange</span>
+                                    <span class="plate__description">Au piment d'Espelette</span>
                                     <span class="plate__price">25€</span>
                                 </div>
                             </div>
@@ -85,9 +86,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Velouté de légumes d'antan</h3>
+                                <h3 class="page__plate-title">Foie gras de canard mi-cuit</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Carotte, panais, topinambour</span>
+                                    <span class="plate__description">Et ses copeaux de truffe noire</span>
                                     <span class="plate__price">35€</span>
                                 </div>
                             </div>
@@ -96,9 +97,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Soupe à l'oignon</h3>
+                                <h3 class="page__plate-title">Oeuf au plat</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Revisitée</span>
+                                    <span class="plate__description">Assaisonné à la truffe sur lit de caviar</span>
                                     <span class="plate__price">20€</span>
                                 </div>
                             </div>
@@ -111,9 +112,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Coquilles Saint-Jacques</h3>
+                                <h3 class="page__plate-title">Filet de boeuf aux herbes</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Accompagnées d'une purée de panais</span>
+                                    <span class="plate__description">Accompagné de sa ribambelle de légumes</span>
                                     <span class="plate__price">40€</span>
                                 </div>
                             </div>
@@ -122,9 +123,9 @@
                         
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Magret de canard</h3>
+                                <h3 class="page__plate-title">Parmentier de queue de boeuf</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Et parmentier de pommes de terre</span>
+                                    <span class="plate__description">À la truffe noire sur sa purée de panais</span>
                                     <span class="plate__price">35€</span>
                                 </div>
                             </div>
@@ -133,9 +134,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <h3 class="page__plate-title">Filet de turbot</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Sur son lit de gnocchis aux légumes</span>
+                                    <span class="plate__description">Aux agrumes</span>
                                     <span class="plate__price">44€</span>
                                 </div>
                             </div>
@@ -148,9 +149,9 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Pétales de violettes glacés</h3>
+                                <h3 class="page__plate-title">Paris-Brest</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Et purée de noisettes</span>
+                                    <span class="plate__description">Revisité</span>
                                     <span class="plate__price">18€</span>
                                 </div>
                             </div>
@@ -159,10 +160,10 @@
 
                         <div class="page__plate">
                             <div class="page__plate-card">
-                                <h3 class="page__plate-title">Fondant au chocolat</h3>
+                                <h3 class="page__plate-title">Mousse au chocolat</h3>
                                 <div class="page__plate-block">
-                                    <span class="plate__description">Revisité</span>
-                                    <span class="plate__price">22€</span>
+                                    <span class="plate__description">Au piment d'Espelette et à la truffe noire</span>
+                                    <span class="plate__price">23€</span>
                                 </div>
                             </div>
                             <div class="plate__check"><i class="fa-solid fa-circle-check icon__check" aria-hidden="true"></i></div>
