--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </div>
                         </a>
 
-                        <a class="restaurants__list__item" href="menu-la_note_enchantée.html">
+                        <a class="restaurants__list__item" href="menu-la_note_enchantee.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo La note enchantée">
