Change all html files name without any accent

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h2 class="restaurants__title">Restaurants</h2>
                     <div class="restaurants__list">
 
-                        <a class="restaurants__list__item" href="menu-la_palette_du_goût.html">
+                        <a class="restaurants__list__item" href="menu-la_palette_du_gout.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo La palette du goût">
@@ -151,7 +151,7 @@
                             </div>
                         </a>
 
-                        <a class="restaurants__list__item" href="menu-le_délice_des_sens.html">
+                        <a class="restaurants__list__item" href="menu-le_delice_des_sens.html">
                             <div class="item__card">
                                 <div class="restaurants__card-photo">
                                     <img class="restaurants__photo" src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo Le délice des sens">
